src/main/java/com/example/experiments/error/exceptions/ApiUserNotFoundException.java
package com.example.experiments.error.exceptions;

public class ApiUserNotFoundException extends RuntimeException {
    public ApiUserNotFoundException(Long id) {
        super("User id not found: " + id);
    }
}
